feat(scala): Complete Chapter 4 Iris Classification Model Implementation
- Migrate from Scala 3.3.1 to Scala 2.13.12 for better ScalaTest compatibility
- Implement IrisClassifier with Apache Spark MLlib (DecisionTreeClassifier)
- Add VectorAssembler with handleInvalid="skip" for null value handling
- Create comprehensive test suite (5 tests passing, 1 ignored on Windows)
- Add TrainIris script achieving 97.83% test accuracy
- Fix missing values in iris.csv dataset
- Configure Java 17 module exports for Spark compatibility

テストのコンパイルと実行、訓練スクリプトの作成が完了しました。

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>